--- a/.github/workflows/ha-addon-test.yml
+++ b/.github/workflows/ha-addon-test.yml
@@ -11,42 +11,12 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v3
         
-#      - name: Test build armv7
-#        # uses: home-assistant/builder@54dcff2fc94a5c8b71abe3a94ea574dc77895554
-#        uses: home-assistant/builder@2023.09.0
-#        with:
-#          args: |
-#            --test \
-#            --armv7 \
-#            --target qbha \
-#            --docker-hub ${{ secrets.DOCKER_USERNAME }}
-        
-      - name: Test build amd64
+      - name: Test build
         # uses: home-assistant/builder@54dcff2fc94a5c8b71abe3a94ea574dc77895554
         uses: home-assistant/builder@2023.09.0
         with:
           args: |
             --test \
-            --amd64 \
-            --target qbha \
-            --docker-hub ${{ secrets.DOCKER_USERNAME }}
-        
-      - name: Test build aarch64
-        # uses: home-assistant/builder@54dcff2fc94a5c8b71abe3a94ea574dc77895554
-        uses: home-assistant/builder@2023.09.0
-        with:
-          args: |
-            --test \
-            --aarch64 \
-            --target qbha \
-            --docker-hub ${{ secrets.DOCKER_USERNAME }}
-        
-      - name: Test build i386
-        # uses: home-assistant/builder@54dcff2fc94a5c8b71abe3a94ea574dc77895554
-        uses: home-assistant/builder@2023.09.0
-        with:
-          args: |
-            --test \
-            --i386 \
+            --all \
             --target qbha \
             --docker-hub ${{ secrets.DOCKER_USERNAME }}
