--- a/.github/workflows/ha-addon-test.yml
+++ b/.github/workflows/ha-addon-test.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v3
         
-      - name: Test build
+      - name: Test build qbha
         # uses: home-assistant/builder@54dcff2fc94a5c8b71abe3a94ea574dc77895554
         uses: home-assistant/builder@2023.09.0
         with:
@@ -21,7 +21,7 @@ jobs:
             --target qbha \
             --docker-hub ${{ secrets.DOCKER_USERNAME }}
         
-      - name: Test build
+      - name: Test build qbusmqtt
         # uses: home-assistant/builder@54dcff2fc94a5c8b71abe3a94ea574dc77895554
         uses: home-assistant/builder@2023.09.0
         with:
