--- a/qbha/config.yaml
+++ b/qbha/config.yaml
@@ -1,6 +1,6 @@
 name: QBHA
 description: Qbus bridge for Home Assistant
-version: 0.4.0
+version: 0.5.0
 image: thomasddn/home-assistant-addon-qbha-{arch}
 slug: qbha
 codenotary: 11554546+thomasddn@users.noreply.github.com
@@ -13,6 +13,7 @@ services:
 map:
   - addon_config:rw
 options:
+  BINARY_SENSORS: ""
   CLIMATE_PRESETS: "MANUEEL,VORST,NACHT,ECONOMY,COMFORT"
   CLIMATE_SENSORS: false
   QBUS_CAPTURE: false
@@ -22,6 +23,7 @@ schema:
   MQTT_PORT: port?
   MQTT_USER: str?
   MQTT_PWD: str?
+  BINARY_SENSORS: str?
   CLIMATE_PRESETS: str?
   CLIMATE_SENSORS: bool
   QBUS_CAPTURE: bool
