--- a/qbusmqtt/build.yaml
+++ b/qbusmqtt/build.yaml
@@ -1,6 +1,9 @@
 build_from:
-  armv7: ghcr.io/home-assistant/armv7-base-ubuntu:20.04
-  amd64: ghcr.io/home-assistant/amd64-base-ubuntu:20.04
+  aarch64: ghcr.io/home-assistant/aarch64-base-debian:bookworm
+  amd64: ghcr.io/home-assistant/amd64-base-debian:bookworm
+  armhf: ghcr.io/home-assistant/armhf-base-debian:bookworm
+  armv7: ghcr.io/home-assistant/armv7-base-debian:bookworm
+  i386: ghcr.io/home-assistant/i386-base-debian:bookworm
 codenotary:
   signer: 11554546+thomasddn@users.noreply.github.com
   base_image: notary@home-assistant.io
