--- a/qbusmqtt/Dockerfile
+++ b/qbusmqtt/Dockerfile
@@ -2,7 +2,7 @@ ARG BUILD_FROM=ghcr.io/home-assistant/amd64-base-debian:bookworm
 
 FROM $BUILD_FROM
 ARG TARGETARCH
-ARG QBUSMQTT_VERSION=v0.3.0
+ARG QBUSMQTT_VERSION=v0.4.0
 
 # Install requirements
 RUN apt-get clean && \
@@ -18,7 +18,6 @@ RUN chmod a+x /run.sh
 # Setup app
 RUN case "${TARGETARCH:-amd64}" in \
         arm|armv7|armhf) ARCH_MAP="arm" ;; \
-        arm64|aarch64) ARCH_MAP="arm64" ;; \
         amd64) ARCH_MAP="x64" ;; \
         386|i386) ARCH_MAP="x86" ;; \
         *) echo "Unsupported architecture: ${TARGETARCH}" && exit 1 ;; \
@@ -27,14 +26,14 @@ RUN case "${TARGETARCH:-amd64}" in \
     cd /qbusmqtt && \
     git switch --detach $QBUSMQTT_VERSION && \
     cd / && \
-    mkdir -p /opt/ubielite && \
-    mkdir -p /var/log/ubielite && \
-    chmod a+r /var/log/ubielite && \
-    cp /qbusmqtt/binaries/UbieLite-${ARCH_MAP}/UbieLite /opt/ubielite/ && \
-    cp -R /qbusmqtt/binaries/fw/ /opt/ubielite/ && \
-    cp /qbusmqtt/binaries/puttftp /opt/ubielite/ && \
-    chmod +x /opt/ubielite/UbieLite && \
-    chmod +x /opt/ubielite/puttftp && \
+    mkdir -p /opt/qbusmqttgw && \
+    mkdir -p /var/log/qbusmqttgw && \
+    chmod a+r /var/log/qbusmqttgw && \
+    cp /qbusmqtt/binaries/gateway-${ARCH_MAP}/qbusMqttGw /opt/qbusmqttgw/ && \
+    cp -R /qbusmqtt/binaries/fw/ /opt/qbusmqttgw/ && \
+    cp /qbusmqtt/binaries/puttftp /opt/qbusmqttgw/ && \
+    chmod +x /opt/qbusmqttgw/qbusMqttGw && \
+    chmod +x /opt/qbusmqttgw/puttftp && \
     rm -rf /qbusmqtt
 
 # Run
